--- a/styles.css
+++ b/styles.css
@@ -16,20 +16,18 @@ body {
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
-    background-color: #f4f4f4;
+    background-color: #eef1ef;
 }
 header {
     text-align: center;
     padding: 15px;
-    background-color: #007bff;
+    background-color: #45B0B9;
     color: white;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 }
 .dashboard {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-row-gap: 5px;
-    grid-column-gap: 5px
     gap: 5px;
     padding: 15px;
     flex: 1;
@@ -38,14 +36,14 @@ header {
     margin-bottom: 8px
 }
 .chart {
-    background-color: white;
+    background-color: #b8e3cd;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     overflow: hidden;
-    height: 300px;
+    height: 100%;
 }
 .chart img {
     max-width: 100%;
@@ -58,7 +56,7 @@ header {
     color: #333;
 }
 footer {
-    background-color: #333;
+    background-color: #45B0B9;
     color: #fff;
     text-align: center;
     padding: 10px;
