--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ header {
     margin-bottom: 8px
 }
 .chart {
-    background-color: #b8e3cd;
+    background-color: #ffffff;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
