--- a/styles.css
+++ b/styles.css
@@ -1,76 +1,366 @@
-@media (max-width: 480px) {
-    .chart {
-        height: 200px;
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        background-color: #eef1ef;
+        height: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
+        margin-bottom: 13%;
     }
-}
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-html, body {
-    height: 100%;
-    overflow-x: hidden;
-}
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    background-color: #eef1ef;
-}
-header {
-    text-align: center;
-    padding: 15px;
-    background-color: #45B0B9;
-    color: white;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-}
-.dashboard {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 5px;
-    padding: 15px;
-    flex: 1;
-    max-height: calc(100vh - 100px);
-    overflow: hidden;
-    margin-bottom: 8px
-}
-.chart {
-    background-color: #ffffff;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    overflow: hidden;
-    height: 100%;
-}
-.chart img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-}
-.chart h2 {
-    margin: 10px 0;
-    font-size: 1.1em;
-    color: #333;
-}
-footer {
-    background-color: #45B0B9;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    font-size: 0.8em;
-    box-shadow: 0 -4px 6px rgba(0,0,0,0.1);
-}
-@media (max-width: 768px) {
+    header {
+        text-align: center;
+        padding: 5%;
+        background-color: #45B0B9;
+        color: white;
+        font-size: 0.7em;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    .chart {
+        height: auto; /* Passt die Höhe dynamisch an */
+        max-height: 100%; /* Begrenzt die Höhe auf 100% des verfügbaren Platzes */
+        background-color: #ffffff;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        overflow: hidden;
+    }
+    .chart h2 {
+        font-size: 0.7em;
+    }
+    .chart img {
+        width: 100%; /* Stellt sicher, dass die Bilder die volle Breite einnehmen */
+        height: auto; /* Passt die Höhe dynamisch an */
+        object-fit: contain; /* Stellt sicher, dass die Bilder nicht abgeschnitten werden */
+    }
     .dashboard {
-        grid-template-columns: 1fr;
-        max-height: none;
+        display: grid;
+        grid-template-columns: 1fr; /* Eine Spalte für mobile Ansicht */
+        gap: 0.5%; /* Größerer Abstand zwischen den Charts */
+        padding: 1%;
+        flex: 1;
+        overflow: auto; /* Ermöglicht Scrollen auf kleinen Bildschirmen */
+    }
+    footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: #45B0B9;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+        font-size: 0.5em;
+        box-shadow: 0 -4px 6px rgba(0,0,0,0.1);
     }
 }
-@media (max-width: 480px) {
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px)  and (max-width: 768px) {
+     body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            background-color: #eef1ef;
+            height: auto;
+            overflow-x: hidden;
+            overflow-y: auto;
+            margin-bottom: 8%;
+        }
+        header {
+            text-align: center;
+            padding: 15px;
+            background-color: #45B0B9;
+            color: white;
+            font-size: 0.7em;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        .chart {
+            height: auto; /* Passt die Höhe dynamisch an */
+            max-height: 100%; /* Begrenzt die Höhe auf 100% des verfügbaren Platzes */
+            background-color: #ffffff;
+            border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            overflow: hidden;
+        }
+        .chart h2 {
+            font-size: 0.7em;
+        }
+        .chart img {
+            width: 100%; /* Stellt sicher, dass die Bilder die volle Breite einnehmen */
+            height: auto; /* Passt die Höhe dynamisch an */
+            object-fit: contain; /* Stellt sicher, dass die Bilder nicht abgeschnitten werden */
+        }
+        .dashboard {
+            display: grid;
+            grid-template-columns: 1fr; /* Eine Spalte für mobile Ansicht */
+            gap: 10px; /* Größerer Abstand zwischen den Charts */
+            padding: 10px;
+            flex: 1;
+            overflow: auto; /* Ermöglicht Scrollen auf kleinen Bildschirmen */
+        }
+        footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #45B0B9;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            font-size: 0.5em;
+            box-shadow: 0 -4px 6px rgba(0,0,0,0.1);
+        }
+    }
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+    body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        background-color: #eef1ef;
+        height: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
+        margin-bottom: 10%;
+    }
+    header {
+        text-align: center;
+        padding: 5%;
+        background-color: #45B0B9;
+        color: white;
+        font-size: 1.1em;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
     .chart {
-        height: 200px;
+        height: auto; /* Passt die Höhe dynamisch an */
+        max-height: 100%; /* Begrenzt die Höhe auf 100% des verfügbaren Platzes */
+        background-color: #ffffff;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        overflow: hidden;
+    }
+    .chart h2 {
+        font-size: 1.4em;
+    }
+    .chart img {
+        width: 100%; /* Stellt sicher, dass die Bilder die volle Breite einnehmen */
+        height: auto; /* Passt die Höhe dynamisch an */
+        object-fit: contain; /* Stellt sicher, dass die Bilder nicht abgeschnitten werden */
+    }
+    .dashboard {
+        display: grid;
+        grid-template-columns: 1fr; /* Eine Spalte für mobile Ansicht */
+        gap: 0.5%; /* Größerer Abstand zwischen den Charts */
+        padding: 1%;
+        flex: 1;
+        overflow: auto; /* Ermöglicht Scrollen auf kleinen Bildschirmen */
+    }
+    footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: #45B0B9;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+        font-size: 0.9em;
+        box-shadow: 0 -4px 6px rgba(0,0,0,0.1);
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+    body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        background-color: #eef1ef;
+        height: 100%;
+        overflow-x: hidden;
+        overflow-y: auto;
+        margin-bottom: 9%;
+    }
+    header {
+        text-align: center;
+        padding: 5%;
+        background-color: #45B0B9;
+        color: white;
+        font-size: 1.3em;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    .chart {
+        height: auto; /* Passt die Höhe dynamisch an */
+        max-height: 100%; /* Begrenzt die Höhe auf 100% des verfügbaren Platzes */
+        background-color: #ffffff;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        overflow: hidden;
+    }
+    .chart h2 {
+        font-size: 1.8em;
+    }
+    .chart img {
+        width: 100%; /* Stellt sicher, dass die Bilder die volle Breite einnehmen */
+        height: auto; /* Passt die Höhe dynamisch an */
+        object-fit: contain; /* Stellt sicher, dass die Bilder nicht abgeschnitten werden */
+    }
+    .dashboard {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* Zwei Spalten für die Desktop Ansicht */
+        gap: 0.5%; /* Größerer Abstand zwischen den Charts */
+        padding: 1%;
+        flex: 1;
+        overflow: auto; /* Ermöglicht Scrollen auf kleinen Bildschirmen */
+    }
+    footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: #45B0B9;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+        font-size: 1.1em;
+        box-shadow: 0 -4px 6px rgba(0,0,0,0.1);
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        background-color: #eef1ef;
+        height: 100%;
+        overflow-x: hidden;
+        overflow-y: auto;
+        margin-bottom: 9%;
+    }
+    header {
+        text-align: center;
+        padding: 5%;
+        background-color: #45B0B9;
+        color: white;
+        font-size: 1.3em;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    .chart {
+        height: auto; /* Passt die Höhe dynamisch an */
+        max-height: 100%; /* Begrenzt die Höhe auf 100% des verfügbaren Platzes */
+        background-color: #ffffff;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        overflow: hidden;
+    }
+    .chart h2 {
+        font-size: 1.8em;
+    }
+    .chart img {
+        width: 100%; /* Stellt sicher, dass die Bilder die volle Breite einnehmen */
+        height: auto; /* Passt die Höhe dynamisch an */
+        object-fit: contain; /* Stellt sicher, dass die Bilder nicht abgeschnitten werden */
+    }
+    .dashboard {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* Zwei Spalten für die Desktop Ansicht */
+        gap: 0.5%; /* Größerer Abstand zwischen den Charts */
+        padding: 1%;
+        flex: 1;
+        overflow: auto; /* Ermöglicht Scrollen auf kleinen Bildschirmen */
+    }
+    footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: #45B0B9;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+        font-size: 1.1em;
+        box-shadow: 0 -4px 6px rgba(0,0,0,0.1);
+    }
+}
+
+
+/* KMG Screen */
+@media only screen and (width: 1920px) and (height: 1080px) {
+    body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        background-color: #eef1ef;
+        height: 100%;
+        overflow-x: hidden;
+        overflow-y: auto;
+        margin-bottom: 9%;
+    }
+    header {
+        text-align: center;
+        padding: 5%;
+        background-color: #45B0B9;
+        color: white;
+        font-size: 1.3em;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    .chart {
+        height: auto; /* Passt die Höhe dynamisch an */
+        max-height: 100%; /* Begrenzt die Höhe auf 100% des verfügbaren Platzes */
+        background-color: #ffffff;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        overflow: hidden;
+    }
+    .chart h2 {
+        font-size: 1.8em;
+    }
+    .chart img {
+        width: 100%; /* Stellt sicher, dass die Bilder die volle Breite einnehmen */
+        height: auto; /* Passt die Höhe dynamisch an */
+        object-fit: contain; /* Stellt sicher, dass die Bilder nicht abgeschnitten werden */
+    }
+    .dashboard {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* Zwei Spalten für die Desktop Ansicht */
+        gap: 0.5%; /* Größerer Abstand zwischen den Charts */
+        padding: 1%;
+        flex: 1;
+        overflow: auto; /* Ermöglicht Scrollen auf kleinen Bildschirmen */
+    }
+    footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: #45B0B9;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+        font-size: 1.1em;
+        box-shadow: 0 -4px 6px rgba(0,0,0,0.1);
     }
 }
