--- a/styles.css
+++ b/styles.css
@@ -195,7 +195,7 @@
     }
     header {
         text-align: center;
-        padding: 5%;
+        padding: 1%;
         background-color: #45B0B9;
         color: white;
         font-size: 1.3em;
@@ -226,6 +226,7 @@
         gap: 0.5%; /* Größerer Abstand zwischen den Charts */
         padding: 1%;
         flex: 1;
+        max-height: calc(100%);
         overflow: auto; /* Ermöglicht Scrollen auf kleinen Bildschirmen */
     }
     footer {
@@ -256,7 +257,7 @@
     }
     header {
         text-align: center;
-        padding: 5%;
+        padding: 1%;
         background-color: #45B0B9;
         color: white;
         font-size: 1.3em;
@@ -287,6 +288,7 @@
         gap: 0.5%; /* Größerer Abstand zwischen den Charts */
         padding: 1%;
         flex: 1;
+        max-height: calc(100%);
         overflow: auto; /* Ermöglicht Scrollen auf kleinen Bildschirmen */
     }
     footer {
@@ -313,34 +315,32 @@
         background-color: #eef1ef;
         height: 100%;
         overflow-x: hidden;
-        overflow-y: auto;
-        margin-bottom: 9%;
+        overflow-y: hidden;
+        margin-bottom: 5%;
     }
     header {
         text-align: center;
-        padding: 5%;
+        padding: 0.5%;
         background-color: #45B0B9;
         color: white;
         font-size: 1.3em;
         box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
     .chart {
-        height: auto; /* Passt die Höhe dynamisch an */
+        height: 100%; /* Passt die Höhe dynamisch an */
         max-height: 100%; /* Begrenzt die Höhe auf 100% des verfügbaren Platzes */
         background-color: #ffffff;
         border-radius: 8px;
-        display: flex;
-        flex-direction: column;
         align-items: center;
         box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         overflow: hidden;
     }
     .chart h2 {
-        font-size: 1.8em;
+        font-size: 1.5em;
     }
     .chart img {
         width: 100%; /* Stellt sicher, dass die Bilder die volle Breite einnehmen */
-        height: auto; /* Passt die Höhe dynamisch an */
+        height: 95%; /* Passt die Höhe dynamisch an */
         object-fit: contain; /* Stellt sicher, dass die Bilder nicht abgeschnitten werden */
     }
     .dashboard {
@@ -349,6 +349,7 @@
         gap: 0.5%; /* Größerer Abstand zwischen den Charts */
         padding: 1%;
         flex: 1;
+        max-height: calc(830px);
         overflow: auto; /* Ermöglicht Scrollen auf kleinen Bildschirmen */
     }
     footer {
